[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["Majid Shajari <majidpy89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
